[tool.poetry]
name = "traveltime"
version = "0.1.0"
description = "Bus traveltime predictions"
authors = ["Thomas Zamojski <thomas.zamojski@datastorm.fr>"]
license = "DWTFYW"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
numpy = "^1.20.1"
scipy = "^1.6.1"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^6.2.2"
ipython = "^7.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
